--- a/file.html
+++ b/file.html
@@ -27,6 +27,7 @@
                 filePath.innerHTML = "<b>Selected File: </b>" + fileName;
             };
         };
+        customElements.define("com-sap-sample-CUSTOMWidget1", Browse);
     </script>
 </body>
 </html>
